clusters/dev/apps/example-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example-app
  labels:
    app.kubernetes.io/part-of: apps
