clusters/dev/apps/example-app/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: example-app
  namespace: example-app
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`app.lappis.rocks`)
      kind: Rule
      services:
        - name: example-app
          port: 80
